# randomail

./: .gitignore  Cargo.toml  README.md  ok
.github/workflows/: build.yml
randomail/: Cargo.toml
randomail-api/: Cargo.toml
randomail-api/src/: cf_destination.rs  cf_email.rs  cf_zone.rs  config.rs  http.rs  lib.rs
randomail-app/: Cargo.toml
randomail-app/docker/: docker-compose.yml
randomail-app/src/: main.rs
randomail-app/static/: index.html
randomail/src/: main.rs
src/: cf_destination.rs  cf_email.rs  cfapi.rs  config.rs  dest.rs  http.rs  main.rs  responses.rs  routes.rs
