[workspace]
resolver = "3"
members = ["randomail", "randomail-api", "randomail-app"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
log = "0.4"
minreq = { version = "2.14", features = ["https-rustls", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
tokio = { version = "1.49", features = ["full"] }
tracing-subscriber = "0.3"
