[package]
name = "randomail-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json"] }
randomail-api = { path = "../randomail-api" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
